fix: footer alignment on desktop and img overflow

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -86,6 +86,9 @@ main {
     @include tablet {
         max-width: calc(100vw/3);
     };
+    @include desktop {
+        max-width: calc(100vw/4);
+    }
 }
 
 img {
@@ -116,10 +119,10 @@ footer {
     @include desktop {
         justify-content: flex-start;
     }
-    // p {
-    //     @include desktop {
-    //         padding-left: 30px;
-    //     }
+    p {
+        @include desktop {
+            padding-left: 30px;
+        }
     }
 }
 
